--- a/client/src/components/login-form/loginForm.module.css
+++ b/client/src/components/login-form/loginForm.module.css
@@ -1,4 +1,5 @@
 .login_form {
+    position: relative;
     width: 600px;
     height: 350px;
     border: 2px solid white;
@@ -13,4 +14,14 @@
 
 .login_form__input__second {
     margin-bottom: 72px;
+}
+
+.login_form span {
+    position: absolute;
+    top: 200px;
+    width: 300px;
+    right: 50%;
+    transform: translateX(50%);
+    font-size: 13px;
+    color: #ff7565;
 }
